[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Login.gd" type="Script" id=1]

[node name="Login" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LblNome" type="Label" parent="VBoxContainer2"]
margin_top = 270.0
margin_right = 338.0
margin_bottom = 284.0
text = "Coloque seu nome"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 288.0
margin_right = 338.0
margin_bottom = 312.0

[node name="EditNome" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
margin_right = 288.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_left = 292.0
margin_right = 338.0
margin_bottom = 24.0
text = "Logar"

[node name="LblEnter" type="Label" parent="VBoxContainer2"]
margin_top = 316.0
margin_right = 338.0
margin_bottom = 330.0
text = "Aperte o Botao para logar"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Button" to="." method="_on_Button_pressed"]
